tests/compile_errors/027-recursive-call.buzz
| Maximum recursive call reached
fun eternal() > void {
    eternal();
}

test "recursive call limit" {
    eternal();
}